# ascent

./: .gitignore  Makefile.am  configure.ac  project.config
makefiles/: Makefile.cc.am  Makefile.git  Makefile.go.am  Makefile.proto.am
scripts/: git-pre-push.go  git-pre-push.sh
src/cc-ascent/fun/zoidberg/: main.cc
src/go-ascent/algo/election/: election.go  election_test.go
src/go-ascent/base/errs/: error_list.go  interfaces.go  simple_error.go  simple_error_test.go
src/go-ascent/base/log/: interfaces.go  simple_logger.go  simple_logger_test.go
src/go-ascent/fun/bender/: main.go
src/go-ascent/msg/: interfaces.go  simple_packer.go  util.go
src/go-ascent/msg/simple/: messenger.go  messenger_test.go
src/go-ascent/paxos/: interfaces.go
src/go-ascent/paxos/classic/: paxos.go  paxos_test.go
src/go-ascent/paxos/multi/: multi_paxos.go  multi_paxos_test.go
src/go-ascent/thread/ctlr/: alarm.go  alarm_test.go  basic_controller.go  basic_controller_test.go  condition.go  condition_test.go  interfaces.go  resource_controller.go  resource_controller_test.go  simple_controller.go  simple_controller_test.go  time_slice.go
src/go-ascent/wal/: interfaces.go  util.go
src/go-ascent/wal/fswal/: int64slice.go  write_ahead_log.go  write_ahead_log_test.go
src/proto-ascent/algo/election/: rpc.proto  wal_record.proto
src/proto-ascent/base/errs/: error.proto
src/proto-ascent/fun/bender/: commands.proto
src/proto-ascent/msg/: message.proto
src/proto-ascent/msg/simple/: messenger.proto
src/proto-ascent/paxos/classic/: rpc.proto  wal_record.proto
src/proto-ascent/paxos/multi/: rpc.proto  wal_record.proto
src/proto-ascent/wal/: wal.proto
templates/: git-commit-template.txt
