# Copyright (c) 2016 BVK Chaitanya
#
# This file is part of the Ascent Library.
#
# The Ascent Library is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# The Ascent Library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with the Ascent Library.  If not, see <http://www.gnu.org/licenses/>.

AC_INIT([ascent], [0.1])
AM_INIT_AUTOMAKE([foreign no-dist subdir-objects])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_OUTPUT([Makefile])
